--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "weeks",
+	"name": "week",
 	"version": "0.1.0",
 	"private": true,
 	"author": "Tomas Green",
@@ -11,7 +11,6 @@
 		"morgan": "*",
 		"colors": "*",
 		"uuid": "*",
-		"yargs": "*",
 		"gulp": "*",
 		"gulp-watch": "*",
 		"gulp-postcss": "*",
